# StrictLLVM

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Test/: ArrayTest.strict  HelloWorld.strict  module.json
source/: Base.cpp  Base.h  BuildContext.cpp  BuildContext.h  DebugAllocator.cpp  DebugAllocator.h  Enum.cpp  ErrorStream.cpp  ErrorStream.h  JSON.h  Lexer.cpp  Lexer.h  Time.cpp  Time.h  main.cpp
source/ast/: AST.cpp  AST.h  ASTItem.h  ASTParser.cpp  ASTParser.h  Declaration.h  Module.cpp  Module.h  Parser.cpp  Parser.h  Unit.cpp  Unit.h
source/passes/: GatherInformation.cpp  GatherInformation.h  GatherInformationPass.cpp  GatherInformationPass.h  GatherPreresolveMeta.cpp  GatherPreresolveMeta.h  InlineTemplates.cpp  InlineTemplates.h  InlineTemplatesPass.cpp  InlineTemplatesPass.h  LinkModules.cpp  LinkModules.h  LowerImplicitCastsPass.cpp  LowerImplicitCastsPass.h  LowerImpliedDeclarationFlags.cpp  LowerImpliedDeclarationFlags.h  LowerImpliedDeclarationFlagsPass.cpp  LowerImpliedDeclarationFlagsPass.h  LowerOperatorsPass.cpp  LowerOperatorsPass.h  LowerToIR.cpp  LowerToIR.h  LowerToIRPass.cpp  LowerToIRPass.h  OutputModulesPass.cpp  OutputModulesPass.h  Pass.h  ResolveIdentifiers.cpp  ResolveIdentifiers.h  ResolveIdentifiersPass.cpp  ResolveIdentifiersPass.h  ValidateStructure.cpp  ValidateStructure.h  ValidateStructurePass.cpp  ValidateStructurePass.h
